Fixing margin and centar alignments

--- a/Styles.css
+++ b/Styles.css
@@ -13,8 +13,11 @@
   box-sizing: border-box;
   
 }
-.container{
- padding: 30px;
+body 
+{ min-height: 100vh; 
+  display: grid; 
+  place-items: center; 
+  padding: 30px;
 }
 
 .attribution {
